Add missing order attribute to ExerciseRecordTest